specs/001-typescript-to-zig-native/examples/invalid/record-array-field-mismatch.ts
type FileScore = {
  path: string,
  score: int,
};

let files: FileScore[] = [
  {
    path: "README.md",
    score: "high",
  },
];
